--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:text="Sample Story Content"
+        android:screenReaderFocusable="true"
         android:scrollbars="vertical"
         android:fadeScrollbars="true"
         android:textColor="@color/white"
